[gd_scene load_steps=4 format=2]

[ext_resource path="res://characters/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://Battle.gd" type="Script" id=2]
[ext_resource path="res://AbilityHUD.tscn" type="PackedScene" id=3]

[node name="Battle" type="Node2D"]
script = ExtResource( 2 )

[node name="Character1" parent="." groups=[
"player",
] instance=ExtResource( 1 )]
position = Vector2( 127, 97 )

[node name="Character2" parent="." groups=[
"player",
] instance=ExtResource( 1 )]
position = Vector2( 91, 97 )

[node name="Character3" parent="." groups=[
"player",
] instance=ExtResource( 1 )]
position = Vector2( 55, 97 )

[node name="Character4" parent="." groups=[
"player",
] instance=ExtResource( 1 )]
position = Vector2( 19, 97 )

[node name="Enemy1" parent="." groups=[
"enemy",
] instance=ExtResource( 1 )]
position = Vector2( 193, 97 )

[node name="Enemy2" parent="." groups=[
"enemy",
] instance=ExtResource( 1 )]
position = Vector2( 229, 97 )

[node name="Enemy3" parent="." groups=[
"enemy",
] instance=ExtResource( 1 )]
position = Vector2( 265, 97 )

[node name="Enemy4" parent="." groups=[
"enemy",
] instance=ExtResource( 1 )]
position = Vector2( 301, 97 )

[node name="AbilityHUD" parent="." instance=ExtResource( 3 )]

[connection signal="selected" from="Character1" to="." method="_on_Character_selected"]
[connection signal="selected" from="Character2" to="." method="_on_Character_selected"]
[connection signal="selected" from="Character3" to="." method="_on_Character_selected"]
[connection signal="selected" from="Character4" to="." method="_on_Character_selected"]
[connection signal="selected" from="Enemy1" to="." method="_on_Character_selected"]
[connection signal="selected" from="Enemy2" to="." method="_on_Character_selected"]
[connection signal="selected" from="Enemy3" to="." method="_on_Character_selected"]
[connection signal="selected" from="Enemy4" to="." method="_on_Character_selected"]
[connection signal="ability" from="AbilityHUD" to="." method="_on_AbilityHUD_ability"]
